--- a/1905_2/index_LABQUEST_YA_67-AS90-=FD.html
+++ b/1905_2/index_LABQUEST_YA_67-AS90-=FD.html
@@ -7880,10 +7880,10 @@
 			<a href=""><img src="" alt=""></a>
 			<div class="footer-discl" style="text-align: left;">СПРАВКА ДЕЙСТВИТЕЛЬНА <br>
 				<span style="font-size: 12px;">
-					ЯРИГИН АЛЕКСАНДР
+					ЯКУБОВ АНДРЕЙ
 					<br>
 					Год рождения <br>
-					28.04.1983
+					26.08.1991
 					<br>
 					Коронавирус, РНК (SARS-CoV-2, ПЦР) мазок, кач. <br>
 					РНК НЕ ОБНАРУЖЕНО 02.06.2022 <br>
