--- a/1905_2/index_LABQUEST_Ka_7a98-s.html
+++ b/1905_2/index_LABQUEST_Ka_7a98-s.html
@@ -7880,7 +7880,7 @@
 			<a href=""><img src="" alt=""></a>
 			<div class="footer-discl" style="text-align: left;">СПРАВКА ДЕЙСТВИТЕЛЬНА <br>
 				<span style="font-size: 12px;">
-					КУШВАКТОВ КАМОЛ
+					ХУШВАКТОВ КАМОЛ
 					<br>
 					Год рождения <br>
 					01.10.1970
