--- a/1905_2/index_LABQUEST_YS_60A9-0F.html
+++ b/1905_2/index_LABQUEST_YS_60A9-0F.html
@@ -7880,7 +7880,7 @@
 			<a href=""><img src="" alt=""></a>
 			<div class="footer-discl" style="text-align: left;">СПРАВКА ДЕЙСТВИТЕЛЬНА <br>
 				<span style="font-size: 12px;">
-					БЛДАШЕВ СОДИРЖОН
+					ЮЛДАШЕВ СОДИРЖОН
 					<br>
 					Год рождения <br>
 					14.12.1964
