--- a/1905_2/index_LABQUEST_ER_780980-9FDG.html
+++ b/1905_2/index_LABQUEST_ER_780980-9FDG.html
@@ -7880,7 +7880,7 @@
 			<a href=""><img src="" alt=""></a>
 			<div class="footer-discl" style="text-align: left;">СПРАВКА ДЕЙСТВИТЕЛЬНА <br>
 				<span style="font-size: 12px;">
-					ЭШМАТОВ РАМАЗОН
+					ЭШМАНОВ РАМАЗОН
 					<br>
 					Год рождения <br>
 					04.12.2002
